--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="preload" href="_next/static/css/0b1e8f797923b011.css" as="style">
     <link rel="stylesheet" href="_next/static/css/0b1e8f797923b011.css" data-n-g=""><noscript data-n-css=""></noscript>
-    <script defer="" nomodule="" src="_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"></script>
+    <!-- <script defer="" nomodule="" src="_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"></script>
     <script src="_next/static/chunks/webpack-5752944655d749a0.js" defer=""></script>
     <script src="_next/static/chunks/framework-4556c45dd113b893.js" defer=""></script>
     <script src="_next/static/chunks/main-831533b744bce95b.js" defer=""></script>
@@ -27,12 +27,12 @@
     <script src="_next/static/chunks/166-1bac4b615e3a8674.js" defer=""></script>
     <script src="_next/static/chunks/pages/index-54cdcddff88c40ca.js" defer=""></script>
     <script src="_next/static/G_7E_SQeIl5OuvX65N1QP/_buildManifest.js" defer=""></script>
-    <script src="_next/static/G_7E_SQeIl5OuvX65N1QP/_ssgManifest.js" defer=""></script>
+    <script src="_next/static/G_7E_SQeIl5OuvX65N1QP/_ssgManifest.js" defer=""></script> -->
 </head>
 
 <body>
     <div id="__next">
-        <div id="navbar" class="navbar-area">
+        <!--<div id="navbar" class="navbar-area __web-inspector-hide-shortcut__">
             <div class="tuam-nav">
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light"><a class="navbar-brand" href="index.htm"><img
@@ -44,7 +44,7 @@
                                 class="icon-bar bottom-bar"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav">
-                                <li class="nav-item"><a class="nav-link" href="index.htm#">Home <i
+                                <li class="nav-item"><a class="nav-link" href="index.htm#">Home123 <i
                                             class="flaticon-down-arrow"></i></a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item"><a class="nav-link active" href="index.htm">Home One</a>
@@ -107,7 +107,7 @@
                     </nav>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="swiper home-area home-slides">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -115,12 +115,12 @@
                         <div class="d-table">
                             <div class="d-table-cell">
                                 <div class="container">
-                                    <div class="main-banner-content"><span class="sub-title">The Best Workspace in New
-                                            York</span>
-                                        <h1>Professional, Creative, Flexible, Scalable Workspace</h1>
-                                        <div class="btn-box"><a class="default-btn" href="index.htm#">Book A Room
+                                    <div class="main-banner-content"><span class="sub-title">The Best Legal Service
+                                            Provider in India</span>
+                                        <h1>Lawyers, Advisors, Notaries and many more </h1>
+                                        <div class="btn-box"><a class="default-btn" href="team/index.htm#">Try It Now
                                                 <span></span></a>
-                                            <div class="optional-btn"><i class="flaticon-play-button"></i> Watch Video
+                                            <div class="optional-btn"> Register
                                             </div>
                                         </div>
                                     </div>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <div class="main-banner item-bg2">
                         <div class="d-table">
                             <div class="d-table-cell">
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-next"></div> -->
         </div>
         <section class="services-boxes-area">
             <div class="container">
@@ -177,10 +177,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-box"><img src="images/services/services1.jpg" alt="image">
                             <div class="content">
-                                <h3><a href="service-details/index.htm">Office Spaces</a></h3>
+                                <h3><a href="service-details/index.htm">Centralised Platform for all Legal needs</a>
+                                </h3>
                             </div>
                             <div class="hover-content">
-                                <h3><a href="service-details/index.htm">Office Spaces</a></h3>
+                                <h3><a href="service-details/index.htm">Centralised Platform for all Legal needs</a>
+                                </h3>
                                 <p>Lorem ipsum dolor sit amet, adipiscing elit, sed do eiusmod incididunt ut labore et
                                     dolore.</p><a class="read-more-btn" href="service-details/index.htm">Learn More</a>
                             </div>
@@ -189,10 +191,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-box"><img src="images/services/services2.jpg" alt="image">
                             <div class="content">
-                                <h3><a href="service-details/index.htm">Coworking</a></h3>
+                                <h3><a href="service-details/index.htm">Verified Service Providers</a></h3>
                             </div>
                             <div class="hover-content">
-                                <h3><a href="service-details/index.htm">Coworking</a></h3>
+                                <h3><a href="service-details/index.htm">Verified Service Providers</a></h3>
                                 <p>Lorem ipsum dolor sit amet, adipiscing elit, sed do eiusmod incididunt ut labore et
                                     dolore.</p><a class="read-more-btn" href="service-details/index.htm">Learn More</a>
                             </div>
@@ -201,10 +203,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-box"><img src="images/services/services3.jpg" alt="image">
                             <div class="content">
-                                <h3><a href="service-details/index.htm">Meeting Spaces</a></h3>
+                                <h3><a href="service-details/index.htm">Secure and Trustworthy</a></h3>
                             </div>
                             <div class="hover-content">
-                                <h3><a href="service-details/index.htm">Meeting Spaces</a></h3>
+                                <h3><a href="service-details/index.htm">Secure and Trustworthy</a></h3>
                                 <p>Lorem ipsum dolor sit amet, adipiscing elit, sed do eiusmod incididunt ut labore et
                                     dolore.</p><a class="read-more-btn" href="service-details/index.htm">Learn More</a>
                             </div>
@@ -218,13 +220,14 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12">
                         <div class="about-title"><span>About Us</span>
-                            <h2>We offer creative working environments that suit your business</h2>
+                            <h2>Welcome to New Age Vakalat</h2>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <div class="about-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p><a
+                            <p>We are your trusted platform for legal services and secure legal record management.Our
+                                mission is to revolutionize the way legal services are provided and legal records are
+                                managed through blockchain technology</p><a
                                 class="read-more-btn" href="about/index.htm">More About Us <i
                                     class="flaticon-next"></i></a>
                         </div>
@@ -232,7 +235,7 @@
                 </div>
             </div>
         </section>
-        <section class="services-area pb-100">
+        <!-- <section class="services-area pb-100">
             <div class="container">
                 <div class="swiper services-slides">
                     <div class="swiper-wrapper">
@@ -298,19 +301,19 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
-        </section>
-        <section class="partner-area ptb-100 bg-f8f8f8">
-            <div class="container">
-                <div class="partner-title">
+        </section> -->
+        <!-- <section class="partner-area ptb-100 bg-f8f8f8">
+            <div class="container"> -->
+                <!-- <div class="partner-title">
                     <h2>Trusted by 20,000 Companies</h2>
-                </div>
-                <div class="swiper partner-slides">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                </div> -->
+                <!-- <div class="swiper partner-slides">
+                    <div class="swiper-wrapper"> -->
+                        <!-- <div class="swiper-slide">
                             <div class="single-partner-item"><a href="#" target="_blank"><img
                                         src="images/partner/partner1.png" alt="image"></a></div>
-                        </div>
-                        <div class="swiper-slide">
+                        </div> -->
+                        <!-- <div class="swiper-slide">
                             <div class="single-partner-item"><a href="#" target="_blank"><img
                                         src="images/partner/partner2.png" alt="image"></a></div>
                         </div>
@@ -339,10 +342,10 @@
                                         src="images/partner/partner5.png" alt="image"></a></div>
                         </div>
                     </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-        </section>
+                    <div class="swiper-pagination"></div> -->
+                <!-- </div> -->
+            <!-- </div>
+        </section> -->
         <section class="why-choose-us-area">
             <div class="container-fluid">
                 <div class="row">
@@ -357,28 +360,16 @@
                                     incididunt ut labore et dolore magna aliqua.</p>
                                 <ul class="features-list">
                                     <li>
-                                        <div class="icon"><i class="flaticon-layers"></i></div><span>Creative
-                                            Space</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                                        <span>Home based Vakalat</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
                                     </li>
                                     <li>
-                                        <div class="icon"><i class="flaticon-security"></i></div><span>24/7
-                                            Access</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                                      <span>Multilingual Support</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
                                     </li>
                                     <li>
-                                        <div class="icon"><i class="flaticon-wifi"></i></div><span>High Speed
-                                            Wifi</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                                        <span>Evault Integeration</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
                                     </li>
                                     <li>
-                                        <div class="icon"><i class="flaticon-location"></i></div><span>Great
-                                            Location</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                                    </li>
-                                    <li>
-                                        <div class="icon"><i class="flaticon-taxi"></i></div><span>Car
-                                            Sharing</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                                    </li>
-                                    <li>
-                                        <div class="icon"><i class="flaticon-calendar"></i></div><span>Weekly
-                                            Events</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                                        <span>Secure Transactions</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit
                                     </li>
                                 </ul>
                             </div>
@@ -387,7 +378,7 @@
                 </div>
             </div>
         </section>
-        <section class="pricing-area pt-100 pb-70">
+        <!-- <section class="pricing-area pt-100 pb-70">
             <div class="container">
                 <div class="section-title"><span class="sub-title">Our Plan</span>
                     <h2>Our Pricing Packages</h2>
@@ -768,7 +759,6 @@
                                 <li><a href="team/index.htm">Our Team</a></li>
                                 <li><a href="about/index.htm">About Us</a></li>
                                 <li><a href="news1/index.htm">Latest News</a></li>
-                                <li><a href="the-place/index.htm">The Place</a></li>
                                 <li><a href="index.htm#">Privacy Policy</a></li>
                                 <li><a href="events/index.htm">Our Events</a></li>
                                 <li><a href="index.htm#">Terms &amp; Conditions</a></li>
@@ -810,8 +800,8 @@
                     </div>
                 </div>
             </div>
-        </footer>
-        <div class="preloader ">
+        </footer> -->
+        <!-- <div class="preloader ">
             <div id="global">
                 <div id="top" class="mask">
                     <div class="plane"></div>
@@ -824,7 +814,7 @@
                 </div>
                 <p><i>LOADING...</i></p>
             </div>
-        </div>
+        </div> -->
         <div class="scroll-to-top"></div>
     </div>
     <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
